Fixed alignment issues in the content, added more styling for the slides.

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -110,8 +110,10 @@
   .slide-europe .slide-content {
     padding-top: 100px;
     padding-left: 100px;
-    h1 {
+    h2 {
       position: absolute;
+      font-size: 25px;
+      text-align: center;
       top: 100px;
       left: 50px;
     }
@@ -121,12 +123,66 @@
     }
   }
 
+  .slide-tweets-text .slide-content {
+    position: absolute;
+    top: 150px;
+    left: 600px;
+    h1 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 800px;
+    }
+    img {
+      position: absolute;
+      top: 150px;
+      left: 100px;
+      height: 200px;
+      width: auto;
+      display: block;
+      margin: 10px auto;
+    }
+  }
+
+  .slide-tweets .slide-content {
+    position: absolute;
+    top: 150px;
+    left: 500px;
+    h1 {
+      position: absolute;
+      top: 0;
+      left: -100px;
+    }
+    img {
+      height: 200px;
+      width: auto;
+      display: block;
+      margin: 10px auto;
+    }
+  }
+
+  .slide-cloud-text .slide-content {
+    position: absolute;
+    left: 600px;
+    h1 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 800px;
+    }
+  }
+
   .slide-cloud .slide-content {
     position: absolute;
     top: 40px;
     left: 0;
     right: 0;
     bottom: 0;
+    h2 {
+      position: absolute;
+      top: 200px;
+      left: 500px;
+    }
   }
 
   .slide-offices .slide-content {
@@ -145,23 +201,73 @@
     bottom: 0;
   }
 
-  .slide-aggregated .slide-content {
-    position: absolute;
-    top: 40px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-
   .slide-aggregated-text .slide-content {
     padding-left: 100px;
     position: absolute;
-    top: 300px;
+    top: 200px;
     left: 500px;
     right: 450px;
     bottom: 0;
     text-align: center;
+    h1 {
+      position: absolute;
+      top: 50px;
+      width: 800px;
+    }
+    h2 {
+      position: absolute;
+      top: 250px;
+      width: 800px;
+    }
   }
+
+  .slide-aggregated .slide-content {
+    position: absolute;
+    top: 40px;
+    left: 400px;
+    right: 75px;
+    bottom: 0;
+    h1 {
+      position: absolute;
+      top: 0;
+      left: 75px;
+    }
+    .bar-chart {
+      position: absolute;
+      top: 100px;
+      left: 0;
+    }
+  }
+
+  .slide-aggregated2 .slide-content {
+    position: absolute;
+    left: 600px;
+    h1 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 800px;
+    }
+  }
+
+  .slide-links .slide-content {
+    position: absolute;
+    top: 50px;
+    left: 500px;
+    right: 0;
+    bottom: 0;
+    h2 {
+      position: absolute;
+      top: 75px;
+      left: 0;
+    }
+    .urls {
+      position: absolute;
+      top: 200px;
+      left: 0;
+    }
+  }
+
 
   .slide-summary .slide-content {
     padding-left: 100px;
@@ -224,13 +330,5 @@
         }
       }
     }
-  }
-
-  .slide-links .slide-content {
-    position: absolute;
-    top: 200px;
-    left: 600px;
-    right: 0;
-    bottom: 0;
   }
 }
